# Practice_project

./: .env_template  docker-compose.yml  pyproject.toml  requirements.txt
bot/config/: config_data.py  settings.py
bot/core/: main.py
bot/core/handlers/: __init__.py
bot/core/handlers/common/: game_handlers.py  handler_fabrics.py  information_handlers.py  laboratory.py  navigation_handlers.py  profile_handlers.py
bot/core/handlers/game_handlers/: kmn_handlers.py  red_black_handlers.py  saper_handlers.py
bot/core/keyboards/: inline.py  universal.py
bot/core/states/: common.py
bot/core/utils/: game.py  helpers.py
database/: bot.db  creation.py  crud.py
